--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -18,36 +18,44 @@ body { padding: 0 20px; }
 
 h1 {
   font-size: 32px;
-  margin-bottom: 15px;
+  margin: 15px 0;
 }
 
 h2 {
   font-size: 24px;
-  margin-bottom: 10px;
+  margin: 10px 0;
+}
+
+h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 10px 0;
 }
 
 ul {
   list-style-type: disc;
 
   li { margin-left: 20px; }
+}
 
-  &.social {
-    margin-top: 5px;
-    list-style-type: none;
+ul.social {
+  list-style-type: none;
 
-    li {
-      padding-left: 38px;
-      height: 32px;
-      margin-bottom: 5px;
-      line-height: 32px;
-    }
+  li {
+    line-height: normal;
+  }
 
-    li.twitter {
-      background: url(../../images/twitter_32.png) no-repeat;
-    }
+  > li {
+    padding-left: 38px;
+    min-height: 32px;
+    line-height: 32px;
+  }
 
-    li.github {
-      background: url(../../images/github_32.png) no-repeat;
-    }
+  .twitter {
+    background: url(../../images/twitter_32.png) no-repeat;
+  }
+
+  .github {
+    background: url(../../images/github_32.png) no-repeat;
   }
 }
