No longer using Octopi.

--- a/app/views/members/_member.html.haml
+++ b/app/views/members/_member.html.haml
@@ -12,6 +12,6 @@
       %ul.commits
         - member.github_commits[0..20].each do |commit|
           %li
-            [#{commit.repository.name} #{Date.parse(commit.committed_date).to_s}]
+            [#{repo_name_from_commit_url(commit.url)} - #{Date.parse(commit.committed_date).to_s}]
             %span.commit-message= commit.message
     %li.twitter= member.twitter_username
