--- a/app/views/members/_member.html.haml
+++ b/app/views/members/_member.html.haml
@@ -5,14 +5,14 @@
       %span.username= link_to member.github_username, "#{github_base_url}/#{member.github_username}"
       %h3 Repositories
       %ul.repositories
-        - member.github_repos.each do |repo|
+        - sorted_repos(member.github_repos).each do |repo|
           %li= link_to repo.name, repo.url
 
       %h3 Recent Commits
       %ul.commits
-        - member.github_commits[0..20].each do |commit|
+        - sorted_commits(member.github_commits, 20).each do |commit|
           %li
-            [#{repo_name_from_commit_url(commit.url)} - #{Date.parse(commit.committed_date).to_s}]
+            [#{repo_name_from_commit_url(commit.url)} - #{Date.parse(commit.committed_date).to_s(:long)}]
             %span.commit-sha= link_to short_sha(commit.id), github_base_url + commit.url
             %span.commit-message= commit.message
     %li.twitter= member.twitter_username
